- fixed bug with LP not being flushed after bound changes on columns that are not in the LPI
- methods SCIPlpiIs{PrimalFeasible,DualFeasible,DualUnbounded}() in SoPlex LPi now check that the LP is not perturbed,
  which may happen when stopping due to iteration or time limit
- fixed inconsistencies between methods SCIPlpiIs{PrimalFeasible,DualFeasible,Optimal,...} in SoPlex LPi

performance improvements:
- also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
- sort genvbounds only when root node is finished; apply more often

features:
- added delayed cutpool which only get separated if the sepastore is empty after a separation round

interface:
- fixed spelling in the method name SCIPgmlWriteClosing()
- new method SCIPgetNLimSolsFound() to get number of solutions that respect the objective limit
- when using an objective limit, heuristic characters are not displayed any longer for worse solutions
- statistics now include output on number of solutions that respect objective limit

SCIP version 3.0.0
==================

datastructure:
- new data structure for binary trees (SCIP_BT and SCIP_BTNODE in pub_misc.h)
- renamed data structure SCIP_STAIRMAP to SCIP_PROFILE
- renamed data structure SPARSESOLUTION to SCIP_SPARSESOL and moved it from cons_countsols.h to struct_misc.h

interface
- new method SCIPisConflictAnalysisApplicable() which return FALSE is the conflict will not runs; can be used
  to avoid unnecessary initialization of the conflict analysis
- the methods SCIPsortedvecInsert*() have an additional parameter which can be used to receive the position where
  the new element was inserted, if this is not of interest a NULL pointer can be given
- SCIPcolGetStrongbranchLPAge(), SCIPgetVarStrongbranchLPAge(), SCIPgetNLPs(), SCIPgetNPrimalLPs(), SCIPgetNDualLPs(),
  SCIPgetNBarrierLPs(), SCIPgetNResolveLPs(), SCIPgetNPrimalResolveLPs(), SCIPgetNDualResolveLPs(), SCIPgetNNodeLPs(),