@@ -17622,14 +17622,61 @@ SCIP_RETCODE SCIPaddVarImplication(
 {
    SCIP_CALL( checkStage(scip, "SCIPaddVarImplication", FALSE, FALSE, FALSE, FALSE, FALSE, TRUE, FALSE, TRUE, FALSE, TRUE, FALSE, FALSE, FALSE, FALSE) );
 
-   if( SCIPvarGetType(var) != SCIP_VARTYPE_BINARY )
+   if( !SCIPvarIsBinary(var) )
    {
       SCIPerrorMessage("can't add implication for nonbinary variable\n");
       return SCIP_INVALIDDATA;
    }
 
-   SCIP_CALL( SCIPvarAddImplic(var, scip->mem->probmem, scip->set, scip->stat, scip->lp, scip->cliquetable,
-         scip->branchcand, scip->eventqueue, varfixing, implvar, impltype, implbound, TRUE, infeasible, nbdchgs) );
+   /* the implication graph can only handle 'real' binary (SCIP_VARTYPE_BINARY) variables, therefore we transform the
+    * implication in variable bounds, (lowerbound of y will be abbreviated by lby, upperbound equivlaent) the follwing
+    * four cases are:
+    *
+    * 1. (x >= 1 => y >= b) => y >= (b - lby) * x + lby
+    * 2. (x >= 1 => y <= b) => y <= (b - uby) * x + uby
+    * 3. (x <= 0 => y >= b) => y >= (lby - b) * x + b
+    * 4. (x <= 0 => y <= b) => y <= (uby - b) * x + b
+    */
+   if( SCIPvarGetType(var) != SCIP_VARTYPE_BINARY )
+   {
+      SCIP_Real lby;
+      SCIP_Real uby;
+
+      lby = SCIPvarGetLbGlobal(implvar);
+      uby = SCIPvarGetUbGlobal(implvar);
+
+      if( varfixing == TRUE )
+      {
+         if( impltype == SCIP_BOUNDTYPE_LOWER )
+         {
+            SCIP_CALL( SCIPvarAddVlb(implvar, scip->mem->probmem, scip->set, scip->stat, scip->lp, scip->cliquetable,
+                  scip->branchcand, scip->eventqueue, var, implbound - lby, lby, TRUE, infeasible, nbdchgs) );
+         }
+         else
+         {
+            SCIP_CALL( SCIPvarAddVub(implvar, scip->mem->probmem, scip->set, scip->stat, scip->lp, scip->cliquetable,
+                  scip->branchcand, scip->eventqueue, var, implbound - uby, uby, TRUE, infeasible, nbdchgs) );
+         }
+      }
+      else
+      {
+         if( impltype == SCIP_BOUNDTYPE_LOWER )
+         {
+            SCIP_CALL( SCIPvarAddVlb(implvar, scip->mem->probmem, scip->set, scip->stat, scip->lp, scip->cliquetable,
+                  scip->branchcand, scip->eventqueue, var, lby - implbound, implbound, TRUE, infeasible, nbdchgs) );
+         }
+         else
+         {
+            SCIP_CALL( SCIPvarAddVub(implvar, scip->mem->probmem, scip->set, scip->stat, scip->lp, scip->cliquetable,
+                  scip->branchcand, scip->eventqueue, var, uby - implbound, implbound, TRUE, infeasible, nbdchgs) );
+         }
+      }
+   }
+   else
+   {
+      SCIP_CALL( SCIPvarAddImplic(var, scip->mem->probmem, scip->set, scip->stat, scip->lp, scip->cliquetable,
+            scip->branchcand, scip->eventqueue, varfixing, implvar, impltype, implbound, TRUE, infeasible, nbdchgs) );
+   }
 
    return SCIP_OKAY;
 }
